# MasterCard-simulator

./: BankSimulator.cpp  BankSimulator.h  CMakeLists.txt  README.md  interface.hpp
ForCompile/: resource.rc
include/: termcolor.hpp
interface/: block.hpp  cashid.hpp  change.hpp  clear.hpp  define.h  list.hpp  read.hpp
